Update FileFetcher, CreateInstallerCommand, and application.properties